*** Stachethemes Seat Planner Lite Changelog ***

2026.01.27 Version 1.4.1
- Added seat details tooltip on mobile devices
- Other minor bug fixes

2026.01.26 Version 1.4.0
* Added Manager section in the Admin Panel
* Added option to hide the QR Code

2026.01.16 Version 1.3.0
* Added: New tool "Edit Order", enabling admins to modify existing orders data, such as changing seat ID.

2026.01.08 Version 1.1.0
* Added: New general option "Enforce WooCommerce Cart Calculation". This option helps fix the issue with missing cart price on certain themes.
* Fixed: Fixed issue where the cart timer may not work properly on certain carts

= 1.0.42 =
- Fixed a bug where setting a non-existent or invalid product ID in the shortcode caused a crash.

= 1.0.40 =
- Option to disable the "Select Seat" button on product listings (product loops) such as the Shop page and category pages.
- New Accent Color option for simpler front-end UI color customization. Legacy color customization options have been removed.
- Merged Cart Timer and Add to Cart settings into a new Cart Behaviour tab in the plugin settings.
- Front-end UI now displays the Close button at all times.
- Front-end UI buttons and elements now follow the Accent Color setting.
- Converted the Round Corners option to a slider for better control over element border radius.
- Minor fixes and improvements.


= 1.0.38 =
- The Plugin now uses it's own "Select Seat", "View Cart" buttons.
- Added option to change colors for "Select Seat", "View Cart", "Add to Cart" buttons.
- Added Front-end seat tooltip
- Added Compatibility mode for cache plugins (e.g. WP Rocket, LiteSpeed) when lazy loading breaks due to JS optimization.
- Added New editor option "Additional Class Name" allowing custom CSS classes to be attached to objects.
- Improved UI for adding dates to the product.
- "Seat Reservation Time" and "Auto-Complete Orders" options moved to the new General tab in plugin settings.

= 1.0.36 =