@@ -2,6 +2,7 @@ import { createContext, useContext, useState, useCallback, ReactNode } from 'rea
 import { __ } from '@src/utils';
 
 export type SettingsState = {
+    stachesepl_seat_selector_tooltip: 'disabled' | 'desktop' | 'mobile' | 'always'
     stachesepl_qr_code_enabled: 'yes' | 'no'
     stachesepl_dt_adjacent_months: 'yes' | 'no'
     stachesepl_enable_in_loop_button: 'yes' | 'no'
@@ -32,6 +33,7 @@ type SettingsContextType = {
 }
 
 const defaultSettings: SettingsState = {
+    stachesepl_seat_selector_tooltip: 'always',
     stachesepl_qr_code_enabled: 'yes',
     stachesepl_dt_adjacent_months: 'no',
     stachesepl_enable_in_loop_button: 'yes',
