@@ -1,8 +1,9 @@
 *** Stachethemes Seat Planner Lite Changelog ***
 
 2026.01.27 Version 1.4.1
-- Added seat details tooltip on mobile devices
-- Other minor bug fixes
+* Added: Seat details tooltip on mobile devices
+* Added: Added new option in general settings to show or hide the seat details tooltip
+* Other: Minor bug fixes
 
 2026.01.26 Version 1.4.0
 * Added Manager section in the Admin Panel
